# Mini-RAG

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  README.md  agent.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/: DEVLOG.md
mini_rag/: README.md  __init__.py  check_setup.py  chroma_client.py  mcp_server.py  retriever.py  utils.py
mini_rag/ingest/: __init__.py  __main__.py  chunking.py  embeddings.py  orchestrator.py  parsing.py  pii.py  schema.py  storage.py
scripts/: dev_agent.py
scripts/sourcing/: README.md  config.py  eval_corpus.json  fetch_papers.py
tests/: conftest.py  test_ingest.py  test_retriever.py
tests/ablation/: README.md  bm25_tokenization.py  bm25_tokenization_results.json
tests/eval/: README.md  baseline_analysis.md  golden_set.jsonl  run_eval.py
tests/eval/analysis/: baseline_analysis.md  v2_per_question_diagnosis.md  v2_retrieval_audit.md  v4_per_question_diagnosis.md  v4_retrieval_audit.md
tests/unit/: test_check_setup.py  test_retriever.py  test_smoke.py  test_sourcing.py
tests/unit/ingest/: test_chunking.py  test_chunking_split.py  test_orchestrator.py  test_parsing.py  test_pii.py  test_schema.py
tools/: README.md  __init__.py  ingest.py  retriever.py  utils.py
tools/ingest/: __init__.py  __main__.py  chunking.py  embeddings.py  orchestrator.py  parsing.py  schema.py  storage.py
