[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain==0.3.25",
    "langchain-openai==0.3.18",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.23",
    "pypdf==5.6.0",
    "python-dotenv==1.1.0",
    "langchain-docling>=1.1.0",
    "langdetect>=1.0.9",
]

[dependency-groups]
sourcing = [
    "arxiv>=2.1.0",
]
