[project]
name = "mini-rag"
version = "0.3.0"
description = "Research-paper retrieval system for arXiv ML/AI papers, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # LangChain core + integrations
    "langchain==0.3.25",
    "langchain-chroma==0.2.4",
    "langchain-huggingface>=0.1.0",
    "langchain-openai==0.3.18",

    # Retrieval: hybrid (BM25 + dense) + cross-encoder rerank
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "snowballstemmer>=2.2.0",

    # Ingestion: PDF parsing + quality gates
    "docling>=2.100.0",
    "langdetect>=1.0.9",

    # MCP server (production interface)
    "mcp>=1.0.0",

    # Evaluation
    "datasets>=2.14.0",
    "ragas>=0.2.0",

    # Utility
    "certifi>=2024.0.0",
    "python-dotenv==1.1.0",
    "tqdm>=4.0.0",
]

[dependency-groups]
sourcing = [
    "arxiv>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "arxiv>=2.1.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Start conservative: E9 (syntax errors) and F (pyflakes: unused imports,
# undefined names, unused variables). Add stylistic rules later once the
# baseline is clean under this set.
select = ["E9", "F"]
